--- a/Framework - Samy : zonula.html
+++ b/Framework - Samy : zonula.html
@@ -109,12 +109,32 @@ Core ML est lui-même construit sur des technologies bas niveau comme Accelerate
 
 	<div class="element"> <!-- Bastien -->
 		<h2>
-			Article 5 !!
+			j'ai pas de titre
 		</h2>
 		<p>
-			Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+			Le développement en Java impose certaines contraintes :
+nécessité de maitriser de nombreux concepts généraux (notamment celui de la POO, les design patterns, etc ...) et spécifiques aux plate-formes Java (standard, entreprise et mobile) selon les besoins 
+nécessité de maitriser de nombreuses API qui sont de bas niveau 
+quasi-absence d'outils de type RAD 
+Ces facteurs allongent la durée d'apprentissage des développeurs et complexifient l'architecture des applications.
+De ce fait, le concept de framework est apparu, pour l'essentiel, massivement soutenu par la communauté open-source qui est très prolifique dans le monde Java.
 		</p>
-		<h3>Source : <a href="#">blabla</a>
+		<h3>Source : <a href="#">https://www.jmdoudoux.fr/java/dej/chap-frameworks.htm</a>
+		</h3>
+	</div>
+    <div class="element"> <!-- Florent -->
+		<h2>
+			florent garchette
+		</h2>
+		<p>
+			Le développement en Java impose certaines contraintes :
+nécessité de maitriser de nombreux concepts généraux (notamment celui de la POO, les design patterns, etc ...) et spécifiques aux plate-formes Java (standard, entreprise et mobile) selon les besoins 
+nécessité de maitriser de nombreuses API qui sont de bas niveau 
+quasi-absence d'outils de type RAD 
+Ces facteurs allongent la durée d'apprentissage des développeurs et complexifient l'architecture des applications.
+De ce fait, le concept de framework est apparu, pour l'essentiel, massivement soutenu par la communauté open-source qui est très prolifique dans le monde Java.
+		</p>
+		<h3>Source : <a href="#">https://www.jmdoudoux.fr/java/dej/chap-frameworks.htm</a>
 		</h3>
 	</div>
 	<div class="element"><!-- Maxime Lanvin -->
